# tddrobo

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  agent.py  cli.py  config.py  demo_runner.py  logger.py  main.py  pyproject.toml  run_bc_demo.py  run_tests.sh  schema.py  utils.py
.github/workflows/: ci.yml
agent/: __init__.py  edges.py  graph.py  history.py  nodes.py  oracle.py  prompt_builder.py  runner.py
diagtools/: __init__.py  inspect_checkpoint.py  inspect_traces.py  replay_prompt.py  update_test_checkpoint.py  verify_prompts.py
docs/: workflow_graph.mmd
prompts/: __init__.py  generate_design.md  generate_design_refactor_directive.md  generate_refactor_bug_report.md  generate_requirements.md  generate_tests_syntax_fix_context.md  implement_logic_output.md  implement_logic_uniqueness_multi_match_simple.md  plan_integration_tests_base.md  plan_integration_tests_fix_context.md  refactor_logic_fix.md  review_test_plan.md
prompts/common/: test_plan_constraints.md  test_plan_fix_directive.md
tddrobo/: __init__.py  config.py  demo_runner.py  logger.py  schema.py  utils.py
tddrobo/agent/: __init__.py  edges.py  graph.py  history.py  nodes.py  oracle.py  prompt_builder.py  runner.py
tddrobo/diagtools/: __init__.py  inspect_checkpoint.py  inspect_history.py  inspect_traces.py  replay_prompt.py  update_test_checkpoint.py  verify_prompts.py
tddrobo/prompts/: __init__.py  (+26 more)
tests/: conftest.py  run_tests.sh  test_agent.py  test_agent_routing.py  test_diagtools.py  test_e2e.py  test_logger.py  test_prompt_builder.py  test_schema.py  test_utils.py
(+2 files in other folders)
